cleanup Test Class